--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/auth": "^20.0.0",
     "@react-native-firebase/firestore": "^20.0.0",
     "@react-native-firebase/messaging": "^20.1.0",
+    "@react-native-firebase/storage": "^20.1.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
