--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "dotenv": "^16.4.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-native": "^0.74.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0"
