--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/cli-platform-android": "^13.6.8",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.1.0",
@@ -22,6 +24,8 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-native": "^0.74.2",
+    "react-native-async-storage": "^0.0.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
