--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-native": "^0.74.2",
     "react-native-async-storage": "^0.0.1",
+    "react-native-device-info": "^11.1.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.10.4",
