--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,16 @@
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="tallybuzz"/>
       </intent-filter>
+      <intent-filter android:autoVerify="true">
+        <action android:name="android.intent.action.VIEW" />
+
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+
+        <data android:scheme="http" />
+        <data android:scheme="https" />
+        <data android:host="tallybuzz.dynalinks.app" />
+      </intent-filter>
     </activity>
   </application>
 </manifest>
