--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.2",
     "@react-native-community/cli-platform-android": "^13.6.8",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.0.0",
     "@react-native-firebase/firestore": "^20.0.0",
@@ -23,6 +25,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-native": "^0.74.2",
+    "react-native-device-info": "^11.1.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.10.4",
