--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/cli-platform-android": "^13.6.8",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.1.0",
     "@react-native-firebase/firestore": "^20.1.0",
@@ -24,8 +25,10 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-native": "^0.74.2",
+    "react-native-device-info": "^11.1.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-image-picker": "^7.1.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0"
