--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
     "react-native": "^0.74.2",
     "react-native-device-info": "^11.1.0",
