--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native-device-info": "^11.1.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-image-picker": "^7.1.2",
+    "react-native-keychain": "^8.2.0",
+    "react-native-modal": "^13.0.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
